cabal-version:      2.4
name:               d64
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Herbert Lange
maintainer:         github@pietaetskirsche.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable d64
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules: D64

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      bytestring >= 0.11.4.0,
                      colour >= 2.3.6,
                      diagrams-lib,
                      diagrams-svg,
                      diagrams-cairo
-- groups
    hs-source-dirs:   app
    default-language: Haskell2010
